[package]
name = "naive"
version = "0.1.1"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
description = "HTTP/WS async/await compatible very simple client"
license = "MIT/Apache-2.0"
repository = "https://github.com/DenisKolodin/naive"
edition = "2018"

[dependencies]
failure = "0.1.5"
log = "0.4.6"
serde = "1.0.94"
serde_json = "1.0.40"
tokio-tungstenite = "0.8.0"
tungstenite = "0.8.1"
url = "1.7.2"
url_serde = "0.2.0"

[dependencies.futures]
version = "0.1.28"

[dependencies.futures3]
package = "futures-preview"
version = "0.3.0-alpha.17"
features = ["async-await", "nightly", "compat"]
